[gd_scene load_steps=7 format=3 uid="uid://ctc3hpyarwom8"]

[ext_resource type="Script" path="res://actors/shared/duplicateOnEdge.gd" id="1_invso"]
[ext_resource type="Script" path="res://actors/obstacles/turret/turret.gd" id="1_jbux0"]
[ext_resource type="Texture2D" uid="uid://bnkbxmhtdfe28" path="res://assets/obstacles/turret/turret1.png" id="2_vrfm8"]
[ext_resource type="Script" path="res://actors/obstacles/turret/turret_body.gd" id="3_uispj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqvbj"]
radius = 28.0179

[sub_resource type="CircleShape2D" id="CircleShape2D_w5nwq"]
radius = 472.61

[node name="Turret" type="Node2D" groups=["targettable"]]
script = ExtResource("1_jbux0")

[node name="DuplicateOnEdges" type="Node2D" parent="."]
script = ExtResource("1_invso")

[node name="primaryBody" type="Area2D" parent="DuplicateOnEdges"]
script = ExtResource("3_uispj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuplicateOnEdges/primaryBody"]
shape = SubResource("CircleShape2D_mqvbj")

[node name="Sprite2D" type="Sprite2D" parent="DuplicateOnEdges/primaryBody"]
rotation = 1.5708
texture = ExtResource("2_vrfm8")

[node name="Sensor" type="Area2D" parent="DuplicateOnEdges"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuplicateOnEdges/Sensor"]
shape = SubResource("CircleShape2D_w5nwq")

[connection signal="area_entered" from="DuplicateOnEdges/Sensor" to="." method="_on_sensor_area_entered"]
[connection signal="area_exited" from="DuplicateOnEdges/Sensor" to="." method="_on_sensor_area_exited"]
[connection signal="body_entered" from="DuplicateOnEdges/Sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="DuplicateOnEdges/Sensor" to="." method="_on_sensor_body_exited"]
